# taskflows

./: .coverage  .gitignore  .pre-commit-config.yaml  CLOUD_DEPLOYMENT_POC.md  CLOUD_DEPLOYMENT_PRODUCTION.md  README.md  build_ui.sh  demo_unified_service.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements-cloud.txt  test_api_refactor.py  test_local_api.py  unified_service_manager.py
.codigote/tool-outputs/: tool-output-call_473juV9eViILweY9aiAex5F5-8f6992629bb0.json  (+7 more)
.codigote/tools/: client.json  session_controls.json  (+1 more)
configs/: README-loki-configs.md  README-utf8-handling.md  fluent-bit.conf  fluent-bit.conf.backup  generate_loki_configs.py  grafana-datasources.yaml  loki-config.yaml  loki-profiles.yaml
data/: slack_claude.db
examples/: QUICK_START.md  aws_lambda_deployment_example.py  production_aws_deployment.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
taskflows/: __init__.py  common.py  constants.py  constraints.py  dashboard.py  db.py  docker.py  dynamic_imports.py  entrypoints.py  exceptions.py  exec.py  metrics.py  schedule.py  security_validation.py  serialization.py  service.py  tasks.py
tests/: TESTING.md  conftest.py  run_auth_test.py  srv.py  test_admin_core_create.py  test_admin_environments.py  test_admin_utils.py  test_api_auth.py  test_async_implementation.py  test_bash_service_operations.py  test_cgroup_properties.py  test_cli_discover.py  test_cloud_schedule_translation.py  test_common.py  test_dashboard.py  test_db.py  test_docker.py  test_entrypoints.py  test_exec_security.py  test_gdrive_security.py  test_hmac.py  test_integration_service_lifecycle.py  test_prometheus_middleware.py  test_security.py  test_serialization.py  test_service.py  test_task.py  test_task_logger.py
(+297 files in other folders)
