[project]
name = "taskflows"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Kelleher",email = "kelleherjdan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alert-msgs (>=0.7.2,<0.8.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "dbus-python (>=1.4.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "grafanalib (>=0.7.1,<0.8.0)",
    "textdistance (>=4.6.3,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
